# Rosetta

./: CMakeLists.txt  README.md
cmake/template/: rosetta.in.cmake
include/: database_pool.h  mysql.h  rosetta.h
include/builder/: builder.h  del.h  insert.h  join.h  select.h  update.h
include/builder/core/: condition_base.h  limit.h  sql_base.h  where_condition.h  where_group.h  where_groups.h  where_in.h
include/builder/use/: use_column_alias.h  use_distinct.h  use_joins.h  use_limit.h  use_on.h  use_orderby.h  use_table.h  use_where.h
include/common/: database_connection.h  database_connection_base.h  sql_result.h  sql_result_base.h  sql_row.h  sql_statement.h  sql_statement_base.h  sql_types.h
include/common/builder/: grammer_base.cpp  grammer_base.h  join.cpp  join.h  operators.h  query_builder.h  queryable.cpp  queryable.h  types.h  where_condition.cpp  where_condition.h
include/common/sql/: builder.h  grammar.h
include/common/sql/core/: builder_base.h  grammar_base.h  support.h
include/common/sql/support/: builder.h  condition.h  del.h  insert.h  join.h  operate_base.h  select.h  sql_value.cpp  sql_value.h  support.h  update.h
include/core/: sql_value.h
include/exception/: database_exception.h  exception_base.h
include/migration/: field_info.h  info_util.h  table.h
include/migration/mysql_impl/: mysql_info_util.h
include/mysql_impl/: bind_visitor.cpp  bind_visitor.h  mysql_connection.h  mysql_result.h  mysql_row.h  mysql_statement.h
include/mysql_impl/migration/: mysql_info_util.h
include/pool/: database_connection.h  sql_result.h  sql_row.h  sql_statement_base.h
include/pool/mysql_impl/: bind_visitor.h  mysql_connection.h  mysql_result.h  mysql_row.h  mysql_statement.h
source/: database_pool.cpp
source/builder/core/: limit.cpp  where_condition.cpp  where_group.cpp  where_groups.cpp  where_in.cpp
source/builder/use/: use_column_alias.cpp  use_table.cpp
source/common/: sql_result.cpp  sql_row.cpp
source/common/builder/: query_builder.cpp  types.cpp
source/mysql_impl/: mysql_connection.cpp  mysql_result.cpp  mysql_row.cpp  mysql_statement.cpp
source/mysql_impl/migration/: mysql_info_util.cpp
source/sql/: builder.cpp
source/sql/core/: builder.cpp
source/sql/support/: builder.cpp  del.cpp  insert.cpp  join.cpp  select.cpp  support.cpp  update.cpp  where.cpp
test/: main.cpp
